user service integrated